added link and chat repos with tests